<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAAAE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/head"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="51dp"
        android:layout_height="33dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/age"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ageEdit"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/gender"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/height"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heightEdit"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ageEdit"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/ageInfo"
        android:ems="3"
        android:hint="Enter Your Age"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/heightEdit"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/ageInfo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/heightEdit"
        android:layout_width="158dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="Enter Your Height"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DCB07A"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/buttonName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/maleButoon"
        app:layout_constraintBottom_toTopOf="@+id/heightEdit"
        app:layout_constraintEnd_toStartOf="@+id/female"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/ageEdit"
        app:layout_constraintVertical_bias="0.96" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="@string/femaleButton"
        app:layout_constraintBottom_toTopOf="@+id/heightEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.528" />

    <TextView
        android:id="@+id/age"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sonucYas"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sonucCinsiyet"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/height"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sonucUzunluk"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sonucEdit"
        android:layout_width="365dp"
        android:layout_height="82dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sonuc"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintVertical_bias="0.311" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="like:(184,167,179)"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/heightEdit"
        app:layout_constraintTop_toBottomOf="@+id/female"
        app:layout_constraintVertical_bias="0.476" />


</androidx.constraintlayout.widget.ConstraintLayout>